[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0012.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0009.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0002.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0009.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0013.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0014.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0004.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0016.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0006.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0015.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0007.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0008.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemies/DemoGib/hurt/gibhurt.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0001.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0005.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0012.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0011.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0013.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0015.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0017.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0010.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0018.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0014.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemies/DemoGib/death/gibded0003.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0011.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0001.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0002.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0003.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0004.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0006.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0007.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0008.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0005.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Enemies/DemoGib/walk/gibwalk0010.png" type="Texture" id=34]
[ext_resource path="res://Scripts/Enemies/DemoGib/MainActions.gd" type="Script" id=35]
[ext_resource path="res://Scripts/Enemies/DemoGib/MainESM.gd" type="Script" id=36]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 31.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 2 ), ExtResource( 34 ), ExtResource( 25 ), ExtResource( 1 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 24.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 3 ), ExtResource( 24 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": false,
"name": "Death",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 29.5 )

[node name="DemoGib" type="KinematicBody2D"]
script = ExtResource( 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 7.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "Walk"
frame = 16
playing = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 36 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, 7.5 )
shape = SubResource( 3 )

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_body_entered"]
